--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>Homework Week 2</title>
+    <title>Weather App Project</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -82,6 +82,6 @@
       </div>
     </div>
     <script src="src/script.js"></script>
-
+<p><a href="https://github.com/lpb1602/weather-app">Open-source code</a> by Laia Pons</p>
   </body>
 </html>
