Updated the HTML/CSS for the date, time and weather information

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
           </form>
           <button type="button" id="location-button" class="btn btn-secondary">Current location</button>
           <h2 id="searched-city">Barcelona</h2>
-          <p id="current-date"></p>
-          <p id="current-time"></p>
+          <ul></ul>
+          <li id="current-date"></li>
+          <li id="current-time"></li>
+          </ul>
  <div class="row" id="current-weather">
    <div class="col-2"></div>
     <div class="col-4">
@@ -38,13 +40,11 @@
     <div class="col-3">
       <h3> <span id="currentTemperature">19</span>
         <span class=units>ºC</span></h3>
-      <div class="temperature-data">
-      Sunny
-      <br/>
-      Wind: 6km/H
-      <br/>
-    Humidity: 12%
-    </div>
+      <ul class="temperature-data">
+      <li>Sunny</li>
+      <li>Wind: 6km/H</li>
+    <li>Humidity: 12%</li>
+      </ul>
     </div>
     <div class="col-3"></div>
     </div>
