--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
       </div>
     </div>
     <script src="src/script.js"></script>
-<p><a href="https://github.com/lpb1602/weather-app">Open-source code</a> by Laia Pons</p>
+<small><a href="https://github.com/lpb1602/weather-app">Open-source code</a> by Laia Pons</small>
   </body>
 </html>
