Updated current temperature data in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <img src="icons/sun.png" class="current-weather-icon" alt="Sunny" >
 </div>
     <div class="col-3">
-      <h3> <span id="currentTemperature">19</span>
-        <span class=units>ºC</span></h3>
+      <div class="current-data"><strong id="currentTemperature">19</strong>
+        <span class=units>ºC | <a href="#">ºF</a></span></div>
       <ul class="temperature-data">
       <li>Sunny</li>
       <li>Wind: 6km/H</li>
