Added current weather description real data

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <img src="icons/sun.png" class="current-weather-icon" alt="Sunny" >
 </div>
     <div class="col-3">
-      <div class="current-data"><strong id="currentTemperature">19</strong>
+      <div class="current-data"><strong id="currentTemperature"></strong>
         <span class=units>ºC | <a href="#">ºF</a></span></div>
       <ul class="temperature-data">
-      <li>Sunny</li>
-      <li>Wind: 6km/H</li>
-    <li>Humidity: 12%</li>
+      <li id="description">Sunny</li>
+      <li>Wind: <span id="wind"></span>km/H</li>
+    <li>Humidity: <span id="humidity"></span>%</li>
       </ul>
     </div>
     <div class="col-3"></div>
