Update weather icon

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  <div class="row" id="current-weather">
    <div class="col-2"></div>
     <div class="col-4">
-      <img src="icons/sun.png" class="current-weather-icon" alt="Sunny" >
+      <img src="icons/sun.png" id="current-weather-icon" alt="Sunny" >
 </div>
     <div class="col-3">
       <div class="current-data"><strong id="currentTemperature"></strong>
