Updated Search Engine

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           </form>
           <button type="button" id="location-button" class="btn btn-secondary">Current location</button>
-          <h2 id="searched-city">Barcelona</h2>
+          <h2 id="searched-city"></h2>
           <ul></ul>
           <li id="current-date"></li>
           <li id="current-time"></li>
