--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@
           </div>
           </form>
           <button type="button" id="location-button" class="btn btn-secondary">Current location</button>
-          <h2 id="searched-city"></h2>
-          <ul></ul>
-          <li id="current-date"></li>
-          <li id="current-time"></li>
-          </ul>
+  <h2 id="searched-city"></h2>
+  <ul></ul>
+  <li id="current-date"></li>
+  <li id="current-time"></li>
+   </ul>
  <div class="row" id="current-weather">
    <div class="col-2"></div>
     <div class="col-4">
       <img src="icons/sun.png" id="current-weather-icon" alt="Sunny" >
 </div>
     <div class="col-3">
-      <div class="current-data"><strong id="currentTemperature"></strong>
-        <span class=units>ºC | <a href="#">ºF</a></span></div>
-      <ul class="temperature-data">
+      <div class="current-data" class="clearfix" class="float-left">
+        <div id="currentTemperature"></div>
+        <span class=units><a href="#" id="celsius-link" class="active">ºC</a> | <a href="#" id="fahrenheit-link">ºF</a></span></div>
+        <ul class="temperature-data">
       <li id="description">Sunny</li>
       <li>Wind: <span id="wind"></span>km/H</li>
     <li>Humidity: <span id="humidity"></span>%</li>
