Improved forecast code with JS

--- a/index.html
+++ b/index.html
@@ -61,37 +61,9 @@
     </div>
  <hr />  
     <h4>Forecast</h4>
-     <div class="row" id="forecast">
-    <div class="col">
-     <p> Monday</p>
-       <img src="icons/clouds.png" class="weather-icon" alt="Cloudy" >
-
-      <div class="temp-weekday">20ºC</div>
-      
+    <div id="weather-forecast"></div>
     </div>
-    <div class="col">
-       <p>Tuesday</p>
-       <img src="icons/clouds.png" class="weather-icon" alt="Cloudy" >
-      <div class="temp-weekday">23ºC</div>
-    </div>
-    <div class="col">
-      <p>Wednesday</p>
-       <img src="icons/rain.png" class="weather-icon" alt="Rainy" >
-      <div class="temp-weekday">19ºC</div>
-    </div>
-    <div class="col">
-     <p>Thursday</p>
-       <img src="icons/rain.png" class="weather-icon" alt="Rainy" >
-      <div class="temp-weekday">21ºC</div>
-    </div>
-    <div class="col">
-     <p>Friday</p>
-       <img src="icons/clouds.png" class="weather-icon" alt="Cloudy" >
-      <div class="temp-weekday">19ºC</div>
-    </div>
-  </div>
-      </div>
-    </div>
+     </div>
     <script src="src/script.js"></script>
 <small><a href="https://github.com/lpb1602/weather-app">Open-source code</a> by Laia Pons</small>
   </body>
