Deleted unit conversion

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
  <div class="row" id="current-weather">
    <div class="col-2"></div>
     <div class="col-4">
-      <img src="icons/sun.png" id="current-weather-icon" alt="Sunny" >
+      <img id="current-weather-icon" alt="Sunny" >
 </div>
     <div class="col-3">
       <div class="current-data" class="clearfix" class="float-left">
-        <div id="currentTemperature"></div>
-        <span class=units><a href="#" id="celsius-link" class="active">ºC</a> | <a href="#" id="fahrenheit-link">ºF</a></span></div>
+        <div id="current-temperature"></div>
+        <span class=units>ºC</span></div>
         <ul class="temperature-data">
       <li id="description">Sunny</li>
       <li>Wind: <span id="wind"></span>km/H</li>
